--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@
 #
 default: &default
   adapter: postgresql
-  encoding: utf8
+  encoding: unicode
   database: help_juice_articles_development
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: postgres
@@ -84,6 +84,4 @@ test:
 #
 production:
   <<: *default
-  database: help_juice_articles_production
-  username: help_juice_articles
-  password: <%= ENV['HELP_JUICE_ARTICLES_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
